--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,15 @@
     android:layout_marginHorizontal="32dp"
     android:layout_marginTop="32dp">
 
+
+<!--    topbar-->
     <RelativeLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_marginBottom="48dp">
 
-        //Image
-
+        <!--Image-->
         <androidx.cardview.widget.CardView
             android:id="@+id/userImgContainer"
             android:layout_width="48dp"
@@ -24,16 +25,17 @@
             app:cardCornerRadius="16dp"
             app:cardElevation="0dp">
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/imgProfile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/user_image" />
 
         </androidx.cardview.widget.CardView>
 
-        //title
+        <!--        title-->
 
         <TextView
             android:id="@+id/userNamePrefix"
@@ -63,7 +65,7 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        //subtitle
+        <!--        subtitle-->
 
 
         <TextView
@@ -83,27 +85,268 @@
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
             android:layout_marginHorizontal="4dp"
-            android:padding="12dp"
             android:background="@color/transparent"
+            android:padding="12dp"
             android:src="@drawable/ic_hamburger_menu" />
 
 
     </RelativeLayout>
 
 
+
+
     <ScrollView
-        android:id="@+id/billScrollView"
+        android:id="@+id/homeScrollView"
+        android:layout_below="@id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/topBar">
+        android:layout_height="wrap_content">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_Home"
+<!--    Home items container-->
+        <RelativeLayout
+            android:id="@+id/homeContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:layout_height="wrap_content">
 
-        </androidx.recyclerview.widget.RecyclerView>
+
+
+            <!--category cards-->
+
+            <LinearLayout
+
+                android:id="@+id/categoryCardsContainer"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp">
+
+                <!--First Row-->
+                <LinearLayout
+                    android:id="@+id/cardRow1"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    >
+
+                    <!--Electricity Card-->
+                    <LinearLayout
+                        android:id="@+id/electricityCard"
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/outline_grey_10"
+                        android:gravity="center"
+                        android:padding="24dp"
+                        android:layout_marginRight="16dp">
+
+                        <ImageView
+                            android:id="@+id/electricityCardIcon"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:src="@drawable/electricity_card_img"/>
+
+                        <TextView
+                            android:id="@+id/electricityCardTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Electricty"
+                            android:textSize="16sp"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="16dp"/>
+
+                        <TextView
+                            android:id="@+id/electricityCardAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs. 100,000"
+                            android:maxLength="12"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="4dp"/>
+
+
+                    </LinearLayout>
+
+                    <!--water Card-->
+                    <LinearLayout
+                        android:id="@+id/waterCard"
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/outline_grey_10"
+                        android:gravity="center"
+                        android:padding="24dp">
+
+
+                        <ImageView
+                            android:id="@+id/waterCardIcon"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:src="@drawable/water_card_img"/>
+
+                        <TextView
+                            android:id="@+id/waterCardTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Water"
+                            android:textSize="16sp"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="16dp"/>
+
+                        <TextView
+                            android:id="@+id/waterCardAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs. 100,000"
+                            android:maxLength="12"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="4dp"/>
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!--Second Row-->
+                <LinearLayout
+                    android:id="@+id/cardRow2"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!--Internet Card-->
+                    <LinearLayout
+                        android:id="@+id/internetCard"
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/outline_grey_10"
+                        android:gravity="center"
+                        android:padding="24dp"
+                        android:layout_marginRight="16dp">
+
+                        <ImageView
+                            android:id="@+id/internetCardIcon"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:src="@drawable/internet_card_img"/>
+
+                        <TextView
+                            android:id="@+id/internetCardTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Internet"
+                            android:textSize="16sp"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="16dp"/>
+
+                        <TextView
+                            android:id="@+id/internetCardAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs. 100,000"
+                            android:maxLength="12"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="4dp"/>
+
+
+                    </LinearLayout>
+
+                    <!--Fuel Card-->
+                    <LinearLayout
+                        android:id="@+id/fuelCard"
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/outline_grey_10"
+                        android:gravity="center"
+                        android:padding="24dp">
+
+
+                        <ImageView
+                            android:id="@+id/fuelCardIcon"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:src="@drawable/fuel_card_img"/>
+
+                        <TextView
+                            android:id="@+id/fuelCardTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Fuel"
+                            android:textSize="16sp"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="16dp"/>
+
+                        <TextView
+                            android:id="@+id/fuelCardAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs. 100,000"
+                            android:maxLength="12"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/grey_100"
+                            android:layout_marginTop="4dp"/>
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+            <!--recent bills-->
+            <RelativeLayout
+                android:id="@+id/recentBillsContainer"
+                android:layout_below="@id/categoryCardsContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/txtRecentBills"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Recently Bills"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/grey_100"/>
+
+                <TextView
+                    android:id="@+id/viewAllRecentBills"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="View all >"
+                    android:textColor="@color/grey_60"
+                    android:textSize="14sp"
+                    android:clickable="true"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_Home"
+                    android:layout_below="@id/txtRecentBills"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:background="@color/white">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
 
     </ScrollView>
