--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginHorizontal="32dp"
     android:layout_marginTop="32dp">
 
 
-<!--    topbar-->
+<!--    topBar-->
     <RelativeLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp">
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="32dp">
 
         <!--Image-->
         <androidx.cardview.widget.CardView
@@ -80,11 +80,11 @@
 
         <ImageButton
             android:id="@+id/hamburgerMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_alignParentEnd="true"
+
             android:layout_centerInParent="true"
-            android:layout_marginHorizontal="4dp"
             android:background="@color/transparent"
             android:padding="12dp"
             android:src="@drawable/ic_hamburger_menu" />
@@ -99,21 +99,33 @@
         android:id="@+id/homeScrollView"
         android:layout_below="@id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
 
 <!--    Home items container-->
         <RelativeLayout
             android:id="@+id/homeContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="32dp"
+            android:paddingTop="16dp">
 
 
+            <!--Half pie Chart-->
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/homePieChart"
+                android:layout_width="match_parent"
+                android:layout_height="260sp"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/outline_grey_10" />
 
             <!--category cards-->
 
             <LinearLayout
 
                 android:id="@+id/categoryCardsContainer"
+                android:layout_below="@id/homePieChart"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -150,7 +162,8 @@
                             android:id="@+id/electricityCardTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Electricty"
+                            android:text="Electricity"
+                            android:textAlignment="center"
                             android:textSize="16sp"
                             android:textColor="@color/grey_100"
                             android:layout_marginTop="16dp"/>
@@ -159,7 +172,8 @@
                             android:id="@+id/electricityCardAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 100,000"
+                            android:text="Rs. 3,200"
+                            android:textAlignment="center"
                             android:maxLength="12"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -192,6 +206,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Water"
+                            android:textAlignment="center"
                             android:textSize="16sp"
                             android:textColor="@color/grey_100"
                             android:layout_marginTop="16dp"/>
@@ -200,7 +215,8 @@
                             android:id="@+id/waterCardAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 100,000"
+                            android:text="Rs. 3,200"
+                            android:textAlignment="center"
                             android:maxLength="12"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -242,6 +258,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Internet"
+                            android:textAlignment="center"
                             android:textSize="16sp"
                             android:textColor="@color/grey_100"
                             android:layout_marginTop="16dp"/>
@@ -250,7 +267,8 @@
                             android:id="@+id/internetCardAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 100,000"
+                            android:text="Rs. 3,200"
+                            android:textAlignment="center"
                             android:maxLength="12"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -283,6 +301,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Fuel"
+                            android:textAlignment="center"
                             android:textSize="16sp"
                             android:textColor="@color/grey_100"
                             android:layout_marginTop="16dp"/>
@@ -291,7 +310,8 @@
                             android:id="@+id/fuelCardAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 100,000"
+                            android:text="Rs. 3,200"
+                            android:textAlignment="center"
                             android:maxLength="12"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -336,9 +356,9 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView_Home"
-                    android:layout_below="@id/txtRecentBills"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="500dp"
+                    android:layout_below="@id/txtRecentBills"
                     android:layout_marginTop="12dp"
                     android:background="@color/white">
 
