--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -332,19 +332,18 @@
                 <!--saved bills-->
                 <RelativeLayout
                     android:id="@+id/recentBillsContainer"
-                    android:layout_below="@id/categoryCardsContainer"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/categoryCardsContainer">
 
                     <TextView
                         android:id="@+id/txtRecentBills"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Saved Bills"
-                        android:textStyle="bold"
+                        android:textColor="@color/grey_100"
                         android:textSize="18sp"
-                        android:textColor="@color/grey_100"/>
-
+                        android:textStyle="bold" />
 
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -387,6 +386,7 @@
             app:itemPaddingBottom="24dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
+            app:labelVisibilityMode="unlabeled"
             />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
