--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -395,6 +395,7 @@
         app:itemPaddingBottom="24dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        app:labelVisibilityMode="unlabeled"
         />
 
 </com.google.android.material.bottomappbar.BottomAppBar>
