--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -332,28 +332,28 @@
             <!--recent bills-->
             <RelativeLayout
                 android:id="@+id/recentBillsContainer"
-                android:layout_below="@id/categoryCardsContainer"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@id/categoryCardsContainer">
 
                 <TextView
                     android:id="@+id/txtRecentBills"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Recently Bills"
-                    android:textStyle="bold"
+                    android:textColor="@color/grey_100"
                     android:textSize="18sp"
-                    android:textColor="@color/grey_100"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/viewAllRecentBills"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:clickable="true"
                     android:text="View all >"
                     android:textColor="@color/grey_60"
-                    android:textSize="14sp"
-                    android:clickable="true"/>
+                    android:textSize="14sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView_Home"
