--- a/app/src/main/res/layout/add_bill_layout.xml
+++ b/app/src/main/res/layout/add_bill_layout.xml
@@ -13,7 +13,8 @@
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:paddingTop="48dp"
-        android:paddingHorizontal="48dp">
+        android:paddingHorizontal="48dp"
+        >
 
 
 <!--        <ImageView-->
