add initial google SignUp and SignIn add intent to home if user not logout

--- a/app/src/main/res/layout/bill_card.xml
+++ b/app/src/main/res/layout/bill_card.xml
@@ -33,11 +33,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:maxLength="30"
                 android:text="Electricity - August"
                 android:textColor="@color/grey_100"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:maxLength="30"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/billAmount"
@@ -53,13 +53,13 @@
                 android:id="@+id/billDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/billTitle"
                 android:layout_alignParentLeft="true"
+                android:layout_marginTop="4dp"
+                android:maxLength="10"
                 android:text="31.08.2022"
                 android:textColor="@color/grey_60"
-                android:layout_below="@id/billTitle"
-                android:layout_marginTop="4dp"
-                android:textSize="16sp"
-                android:maxLength="10"/>
+                android:textSize="16sp" />
 
 
         </RelativeLayout>
