cast to float and load bill icon

--- a/app/src/main/res/layout/bill_card.xml
+++ b/app/src/main/res/layout/bill_card.xml
@@ -15,18 +15,18 @@
 
 
         <ImageView
-            android:id="@+id/billTypeIcon"
+            android:id="@+id/billTypeIconSavedBIlls"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_electricity" />
+             />
 
 
         <RelativeLayout
             android:id="@+id/billInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/billTypeIcon">
+            android:layout_toEndOf="@id/billTypeIconSavedBIlls">
 
             <TextView
                 android:id="@+id/billTitleHistory"
