Made some changes in the UI and added date picker in add bill bottom sheet

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -32,34 +32,32 @@
         android:layout_centerHorizontal="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         />
+
     <TextView
         android:id="@+id/txtSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_centerHorizontal="true"
         android:padding="5dp"
         android:text="Don't worry! shit happens."
-        android:textColor="@color/grey"
-        android:layout_below="@id/txtTitle"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        android:layout_centerHorizontal="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
-        />
-
+        android:textColor="@color/grey"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="59dp" />
 
 
     <TextView
         android:id="@+id/textView_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:layout_below="@id/txtSubTitle"
+        android:paddingTop="24dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_below="@id/txtSubTitle"
         tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        />
+        tools:layout_editor_absoluteY="59dp" />
 
     <EditText
         android:id="@+id/editTextEmailAddressToReset"
@@ -67,10 +65,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_Email"
         android:background="@drawable/shape_border_and_background"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="johndoe@example.com "
+        android:hint="yourmail@email.com"
         android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:paddingVertical="16dp"
+        android:paddingHorizontal="24dp" />
 
     <Button
         android:id="@+id/btnResetPassword"
@@ -78,13 +78,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextEmailAddressToReset"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
+        android:layout_marginTop="32dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="16dp"
         android:text="Submit"
         android:textAllCaps="false"
         android:textSize="16sp"
-        app:cornerRadius="15dp"
-       />
+        app:cornerRadius="15dp" />
 
 
 
