--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -59,6 +59,7 @@
         android:layout_below="@id/txtSubTitle"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
+        android:layout_marginTop="24dp"
         />
 
     <EditText
@@ -68,15 +69,17 @@
         android:layout_below="@id/textView_Email"
         android:background="@drawable/shape_border_and_background"
         android:ems="10"
-        android:hint="johndoe@example.com "
+        android:hint="yourmail@email.com"
         android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="16dp" />
 
     <TextView
         android:id="@+id/textView_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextmail_ResettedAddress"
+        android:layout_marginTop="16dp"
         android:padding="5dp"
         android:text="Password"
         android:textColor="@color/black"
@@ -91,8 +94,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp" />
-
+        android:paddingVertical="16dp"
+        android:paddingHorizontal="24dp" />
 
 
     <Button
@@ -101,8 +104,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editText_ResettedPassword"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
+        android:layout_marginTop="32dp"
+        android:paddingVertical="16dp"
+        android:paddingHorizontal="24dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textSize="16sp"
