--- a/app/src/main/res/layout/activity_saved_bills.xml
+++ b/app/src/main/res/layout/activity_saved_bills.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="32dp">
+        android:layout_marginTop="16dp">
 
         <!--    topBar-->
         <RelativeLayout
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginBottom="32dp">
+            android:layout_marginBottom="16dp">
 
             <!--Image-->
             <androidx.cardview.widget.CardView
@@ -46,25 +46,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/userImgContainer"
-                android:text="Hey, "
+                android:fontFamily="@font/inter_semibold"
+                android:text="Hello"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/userNamePrefix"
-                android:maxLength="64"
-                android:text="Ravi"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            <!--        <TextView-->
+            <!--            android:id="@+id/userName"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_toEndOf="@id/userNamePrefix"-->
+            <!--            android:maxLength="64"-->
+            <!--            android:text="Ravi"-->
+            <!--            android:textSize="16sp"-->
+            <!--            android:textStyle="bold" />-->
 
             <TextView
                 android:id="@+id/userNamesuffix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/userName"
+                android:layout_toEndOf="@id/userNamePrefix"
                 android:text=" 👋"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -77,10 +79,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/userNamePrefix"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@id/userImgContainer"
                 android:text="Let's track’em all."
-                android:textSize="12sp" />
+                android:textColor="@color/grey_80"
+                android:textSize="14sp" />
 
             <ImageButton
                 android:id="@+id/hamburgerMenu"
